# BitonalFill

./: CMakeLists.txt  CMakeSettings.json  README.md
BitonalFill/: BitonalFill.cpp  BitonalFill.h  CMakeLists.txt  ColorPixelStructs.h  CopyWithBitonalMask.cpp  CopyWithBitonalMask.h  CopyWithBitonalMaskUtilities.cpp  CopyWithBitonalMaskUtilities.h  CopyWithBitonalMask_AVX.cpp  CopyWithBitonalMask_NEON.cpp  FillFromBitonal.cpp  FillFromBitonal.h  FillFromBitonalFillTest.cpp  FillFromBitonalFillTest.h  FillFromBitonal_AVX.cpp  FillFromBitonal_AVX2.cpp  FillFromBitonal_NEON.cpp  FillRemainderLine.h  HiLoBytePackUnpack.cpp  HiLoBytePackUnpack.h  HiLoBytePackUnpack_AVX.cpp  HiLoBytePackUnpack_NEON.cpp  config.h.in
